[build-system]
requires = ["poetry >= 1.2.1", "pip>=20.0.0"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "streamlit_playground"
version = "0.0.1"
description = ""
license = "MIT"
authors = [
    "Daiki Hayashi <daiki@d-hayashi.me>"
]
readme = 'README.md'
repository = "https://github.com/d-hayashi/streamlit-playground"
homepage = ""
keywords = []
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: POSIX :: Linux",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "*"
pip = ">=20.0.0"
streamlit = "^1.10.0"
pydtk = "^0.2.1"
srt = "^3.5.2"
watchdog = "^2.1.8"
streamlit-aggrid = "^0.2.3"

[tool.poetry.dev-dependencies]
flake8 = "*"
pep8 = "*"
pytest = "*"
pyproject-flake8 = "^0.0.1-alpha.2"
black = "^21.9b0"
hacking = "^4.1.0"
flake8-docstrings = "^1.6.0"
isort = {extras = ["pyproject"], version = "^5.9.3"}

[tool.flake8]
exclude = ".venv"
ignore = "H102,H103,W503,E203"
max-line-length = 100

[tool.pytest.ini_options]
addopts = "--verbose --durations=0"
testpaths = ["test"]

[tool.black]
line-length = 100
exclude = '''
(
    .pytest_cache
    | .venv
)
'''

[tool.isort]
include_trailing_comma = true
line_length = 100
